# threadmill

./: .gitignore  .sisyphus-handoff-W012.md  AGENTS.md  GhosttyKit.xcframework  LICENSE  Package.resolved  Package.swift  README.md  Taskfile.yml  spindle
.changesets/: acp-chat-and-testing-infra.md  chat-migration-agent-registry.md
.sisyphus/: goal.md  log.md  orchestrator.md
Scripts/: lint_logging.sh  package_app.sh  setup_xcui_fixture.swift  sync_xcodeproj.sh
Sources/Threadmill/: ContentView.swift  ThreadmillApp.swift
Sources/threadmill-driver/: main.swift
Sources/threadmill-relay/: main.c
Tests/ThreadmillTests/: AddRepoSheetSourceTests.swift  AgentSessionManagerTests.swift  AppDelegateBootstrapSourceTests.swift  AppStateAddProjectTests.swift  AppStateAttachAfterConnectTests.swift  AppStateCancelThreadCreationTests.swift  AppStateCloneRepoTests.swift  AppStateCloseThreadTests.swift  AppStateCreateThreadPRURLTests.swift  AppStateCreateThreadTests.swift  AppStateEventHandlingTests.swift  AppStateHideThreadTests.swift  AppStateInteractionBehaviorTests.swift  AppStateProjectsWithThreadsTests.swift  AppStateRemoteConnectionTests.swift  AppStateRemoveProjectTests.swift  AppStateReopenThreadTests.swift  BrowserSessionManagerTests.swift  ChatConversationServiceTests.swift  ChatConversationTests.swift  ChatModeActionsTests.swift  FileServiceTests.swift  (+43 more)
app/: Package.swift
daemon/: Cargo.toml  threadmill-daemon.service
daemon/src/: lib.rs  main.rs
daemon/tests/: ping.rs
docs/: architecture.md  prd-xcuitest.md  vision.md
protocol/: threadmill-rpc.schema.json
(+230 files in other folders)
